--- a/docroot/devops/reinstall/vars/environments/default_env.yml
+++ b/docroot/devops/reinstall/vars/environments/default_env.yml
@@ -19,16 +19,16 @@ env:
     - { name: 'php-eval', status: false, arguments: "\"\\Drupal::keyValue('system.schema')->set('ymca_master', 8259);\"" }
   shell_commands:
     # @todo Remove after OpenY Migration.
-    - { name: '[Openy Migrate] Updating OpenY', status: true, arguments: "echo system serialization syslog file node rest entity_browser file_browser dropzonejs openy | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
+    - { name: '[Openy Migrate] Updating OpenY', status: false, arguments: "echo system serialization syslog file node rest entity_browser file_browser dropzonejs openy | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
     - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: false, arguments: "echo 8234 8235 8236 8237 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
     - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: false, arguments: "echo 8238 8239 8240 8241 8242 8243 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
     - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: false, arguments: "echo 8244 8245 8246 8247 8248 8249 8250 8251 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
-    - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: true, arguments: "echo 8258 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
-    - { name: '[Openy Migrate] Updating OpenY related features', status: true, arguments: "echo webform redirect crop openy_media openy_media_document openy_media_video openy_node openy_node_landing openy_txnm_color openy_prgf_small_banner openy_prgf_simple_content openy_prgf_2c openy_block_custom_simple openy_prgf | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
+    - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: false, arguments: "echo 8258 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
+    - { name: '[Openy Migrate] Updating OpenY related features', status: false, arguments: "echo webform redirect crop openy_media openy_media_document openy_media_video openy_node openy_node_landing openy_txnm_color openy_prgf_small_banner openy_prgf_simple_content openy_prgf_2c openy_block_custom_simple openy_prgf | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
     - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: false, arguments: "echo 8262 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
-    - { name: '[Openy Migrate] Updating YMCA Master remaining updates', status: true, arguments: "bin/drupal update:execute ymca_master"}
+    - { name: '[Openy Migrate] Updating YMCA Master remaining updates', status: false, arguments: "bin/drupal update:execute ymca_master"}
   modules:
-    - { name: 'config_inspector dblog stage_file_proxy', status: false }
+    - { name: 'config_inspector dblog stage_file_proxy', status: true }
   drush_commands:
     - { name: 'user-password', status: true, arguments: "{{ drupal_user }} --password={{ drupal_pass }}" }
     - { name: 'config-set', status: true, arguments: "system.site uuid 97eff2a4-ba00-4bd3-b64c-7641d6ccb54c -y" }
@@ -44,32 +44,32 @@ env:
     - { name: 'search-index', status: false, arguments: "" }
     - { name: 'config-set', status: true, arguments: "shield.config enabled 1" }
     # Set active configuration for specific environment.
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::service('environment_config.handler')->setActiveConfig('ymca_mindbody.trainings_mapping', 'staging');\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::service('environment_config.handler')->setActiveConfig('mindbody.settings', 'staging');\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::service('environment_config.handler')->setActiveConfig('ymca_site_verify.settings', 'staging');\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::service('environment_config.handler')->setActiveConfig('google_tag.settings', 'staging');\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::service('environment_config.handler')->setActiveConfig('ymca_mindbody.trainings_mapping', 'staging');\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::service('environment_config.handler')->setActiveConfig('mindbody.settings', 'staging');\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::service('environment_config.handler')->setActiveConfig('ymca_site_verify.settings', 'staging');\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::service('environment_config.handler')->setActiveConfig('google_tag.settings', 'staging');\"" }
     # To fix configuration problem let's install the module here.
     - { name: 'en', status: false, arguments: "yptf_master" }
     # Configure synchroniation.
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_sync.settings')->set('active_syncers', ['personify_mindbody_sync.syncer_fast', 'ymca_google.syncer', 'ymca_cdn_sync.syncer'])->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('personify_mindbody_sync.settings')->set('is_production', '0')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_endpoint', 'https://***REMOVED***/PersonifyDataServices/Personifydata.svc/CL_MindBodyCustomerOrder')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('childcare_endpoint', 'https://***REMOVED***/PersonifyDataServices/PersonifyData.svc/CL_GetChildcarePayments')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_username', 'Paperless.Integratio')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_password', 'ymcA9622')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_sync.settings')->set('active_syncers', ['personify_mindbody_sync.syncer_fast', 'ymca_google.syncer', 'ymca_cdn_sync.syncer'])->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('personify_mindbody_sync.settings')->set('is_production', '0')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_endpoint', 'https://***REMOVED***/PersonifyDataServices/Personifydata.svc/CL_MindBodyCustomerOrder')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('childcare_endpoint', 'https://***REMOVED***/PersonifyDataServices/PersonifyData.svc/CL_GetChildcarePayments')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_username', 'Paperless.Integratio')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_personify.settings')->set('customer_orders_password', 'ymcA9622')->save(TRUE);\"" }
     # Set calendar syncer to test mode.
-    - { name: 'config-set', status: false, arguments: "ymca_google.settings is_production 0" }
+    - { name: 'config-set', status: true, arguments: "ymca_google.settings is_production 0" }
     # Set MindCacheProxy status endpoint as a secondary.
     - { name: 'config-set', status: false, arguments: "mindbody_cache_proxy.settings primary 0" }
     # Configure Camp du Nord
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_cdn_sync.settings')->set('data_service_url', 'https://ygtctrain3ebiz.personifycloud.com/PersonifyDataServices/PersonifyData.svc')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_cdn_sync.settings')->set('data_service_user', 'FFW17')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_cdn_sync.settings')->set('data_service_password', 'Winter2017')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('wsdl', 'https://ygtctrain3ebiz.personifycloud.com/SSO/webservice/service.asmx?wsdl')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('url_login', 'https://ygtctrain3ebiz.personifycloud.com/PersonifyEbusiness/Default.aspx?TabID=337')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('url_account', 'https://ygtctrain3ebiz.personifycloud.com/personifyebusiness/MyY.aspx')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('url_sign_out', 'https://ygtctrain3ebiz.personifycloud.com/personifyebusiness/MyY/tabid/61/ctl/Logoff/Default.aspx')->save(TRUE);\"" }
-    - { name: 'php-eval', status: false, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('url_cart', 'https://ygtctrain3ebiz.personifycloud.com/PersonifyEbusiness/YMCA/ShoppingCart.aspx')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_cdn_sync.settings')->set('data_service_url', 'https://ygtctrain3ebiz.personifycloud.com/PersonifyDataServices/PersonifyData.svc')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_cdn_sync.settings')->set('data_service_user', 'FFW17')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_cdn_sync.settings')->set('data_service_password', 'Winter2017')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('wsdl', 'https://ygtctrain3ebiz.personifycloud.com/SSO/webservice/service.asmx?wsdl')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('url_login', 'https://ygtctrain3ebiz.personifycloud.com/PersonifyEbusiness/Default.aspx?TabID=337')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('url_account', 'https://ygtctrain3ebiz.personifycloud.com/personifyebusiness/MyY.aspx')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('url_sign_out', 'https://ygtctrain3ebiz.personifycloud.com/personifyebusiness/MyY/tabid/61/ctl/Logoff/Default.aspx')->save(TRUE);\"" }
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::configFactory()->getEditable('ymca_camp_du_nord.settings')->set('url_cart', 'https://ygtctrain3ebiz.personifycloud.com/PersonifyEbusiness/YMCA/ShoppingCart.aspx')->save(TRUE);\"" }
   post_settings:
     - { name: '$settings["cache"]["bins"]["render"]', status: false, value: 'cache.backend.memory' }
     - { name: '$config["stage_file_proxy.settings"]["origin"]', status: true, value: '{{ origin_site_url }}' }
