--- a/docroot/modules/custom/yptf_kronos/yptf_kronos.services.yml
+++ b/docroot/modules/custom/yptf_kronos/yptf_kronos.services.yml
@@ -5,3 +5,12 @@ services:
   yptf_kronos_reports.generate:
     class: Drupal\yptf_kronos\YptfKronosReports
     arguments: ['@config.factory', '@mindbody_cache_proxy.client', '@logger.channel.yptf_kronos_reports',  '@plugin.manager.mail', '@renderer', '@language_manager']
+  yptf_kronos_reports.generate_monday:
+    class: Drupal\yptf_kronos\YptfKronosReportsMonday
+    arguments:
+      - '@config.factory',
+      - '@mindbody_cache_proxy.client',
+      - '@logger.channel.yptf_kronos_reports',
+      - '@plugin.manager.mail',
+      - '@renderer',
+      - '@language_manager'
