--- a/modules/openy_tools/openy_tools.services.yml
+++ b/modules/openy_tools/openy_tools.services.yml
@@ -1,3 +1,10 @@
 services:
   openy_tools.field_helper:
     class: Drupal\openy_tools\FieldHelper
+  logger.channel.openy_tools:
+    parent: logger.channel_base
+    arguments: ['openy_tools']
+  openy_tools.fix_entity_embed:
+    class: Drupal\openy_tools\FixEntityEmbed
+    arguments:
+      - '@logger.channel.openy_tools'
