--- a/docroot/sniffers.yml
+++ b/docroot/sniffers.yml
@@ -216,23 +216,23 @@
     shell: 'if grep "FOUND" {{ build_reports_dir }}/Features{{ item.name }}sniff.txt; then echo "<strong>`grep -o "\<\| ERROR \|\>" {{ build_reports_dir }}/Features{{ item.name }}sniff.txt | wc -l`</strong> errors for CodeSniffer: Features {{ item.name }} standard file {{ webroot }}/{{ build_reports_dir }}/Features{{ item.name }}sniff.txt" >> {{ workspace_root }}/{{ artifacts_file }} && exit 1; fi'
     with_items: phpcs_standards
 
-  - name: JSHint run
-    shell: 'sudo jshint {{ item.path }} > {{ build_reports_dir }}/{{ item.name }}jshint.txt || true'
-    with_items: jshint_folders
-
-  - name: JSHint build reports
-    ignore_errors: yes
-    shell: 'if [ -s {{ build_reports_dir }}/{{ item.name }}jshint.txt ]; then echo "<strong>`wc -l < {{ build_reports_dir }}/{{ item.name }}jshint.txt`</strong> JSHint: {{ item.name }} standard file {{ webroot }}/{{ build_reports_dir }}/{{ item.name }}jshint.txt" >> {{ workspace_root }}/{{ artifacts_file }} && exit 1; fi'
-    with_items: jshint_folders
-
-  - name: SCSS lint run
-    shell: 'find {{ item.path }} -name "*.scss" -print0 | xargs -0 -r scss-lint > {{ build_reports_dir }}/scsslint{{ item.name }}.txt || true'
-    with_items: scsslint_folders
-
-  - name: SCSS lint build reports
-    ignore_errors: yes
-    shell: 'if grep -o "\<[E]\>" {{ build_reports_dir }}/scsslint{{ item.name }}.txt; then echo "<strong>`grep -o "\<[E]\>" {{ build_reports_dir }}/scsslint{{ item.name }}.txt | wc -l`</strong> errors for SCSS-lint {{ item.name }} standard file {{ webroot }}/{{ build_reports_dir }}/scsslint{{ item.name }}.txt" >> {{ workspace_root }}/{{ artifacts_file }} && exit 1; fi'
-    with_items: scsslint_folders
+#  - name: JSHint run
+#    shell: 'sudo jshint {{ item.path }} > {{ build_reports_dir }}/{{ item.name }}jshint.txt || true'
+#    with_items: jshint_folders
+#
+#  - name: JSHint build reports
+#    ignore_errors: yes
+#    shell: 'if [ -s {{ build_reports_dir }}/{{ item.name }}jshint.txt ]; then echo "<strong>`wc -l < {{ build_reports_dir }}/{{ item.name }}jshint.txt`</strong> JSHint: {{ item.name }} standard file {{ webroot }}/{{ build_reports_dir }}/{{ item.name }}jshint.txt" >> {{ workspace_root }}/{{ artifacts_file }} && exit 1; fi'
+#    with_items: jshint_folders
+#
+#  - name: SCSS lint run
+#    shell: 'find {{ item.path }} -name "*.scss" -print0 | xargs -0 -r scss-lint > {{ build_reports_dir }}/scsslint{{ item.name }}.txt || true'
+#    with_items: scsslint_folders
+#
+#  - name: SCSS lint build reports
+#    ignore_errors: yes
+#    shell: 'if grep -o "\<[E]\>" {{ build_reports_dir }}/scsslint{{ item.name }}.txt; then echo "<strong>`grep -o "\<[E]\>" {{ build_reports_dir }}/scsslint{{ item.name }}.txt | wc -l`</strong> errors for SCSS-lint {{ item.name }} standard file {{ webroot }}/{{ build_reports_dir }}/scsslint{{ item.name }}.txt" >> {{ workspace_root }}/{{ artifacts_file }} && exit 1; fi'
+#    with_items: scsslint_folders
 
   - name: Website credentials
     sudo: yes
