--- a/composer.json
+++ b/composer.json
@@ -165,7 +165,8 @@
                 "2874811 - Add option to show/hide empty views": "https://www.drupal.org/files/issues/Option-added-to-hide-empty-views-2874811.patch"
             },
             "drupal/core": {
-                "1236098 - Notice: Undefined index in _color_rewrite_stylesheet()": "https://www.drupal.org/files/issues/undefined-index-in-_color_rewrite_stylesheet-1236098-37.patch"
+                "1236098 - Notice: Undefined index in _color_rewrite_stylesheet()": "https://www.drupal.org/files/issues/undefined-index-in-_color_rewrite_stylesheet-1236098-37.patch",
+                "2484693 - Telephone Link field formatter InvalidArgumentException with 5 digits or fewer in the number": "https://www.drupal.org/files/issues/2484693-54.patch"
             }
         }
     },
@@ -182,7 +183,7 @@
         "drupal/media_entity": "1.x-dev",
         "drupal/media_entity_image": "1.x-dev",
         "drupal/media_entity_document": "1.x-dev",
-        "drupal/address": "1.2",
+        "drupal/address": "1.4",
         "drupal/paragraphs": "1.2",
         "drupal/entity_reference_revisions": "1.3",
         "drupal/pathauto": "1.0",
