--- a/composer.json
+++ b/composer.json
@@ -179,6 +179,9 @@
             },
             "drupal/core": {
                 "1236098 - Notice: Undefined index in _color_rewrite_stylesheet()": "https://www.drupal.org/files/issues/undefined-index-in-_color_rewrite_stylesheet-1236098-37.patch"
+            },
+            "drupal/dropzonejs": {
+                "2833965 - Multiple submissions of the same form on double-clicking 'Select entities'" : "https://www.drupal.org/files/issues/dropzonejs-prevent_multiple_form_submissions-2833965-10.patch"
             }
         }
     },
