--- a/themes/openy_themes/openy_carnation/openy_carnation.libraries.yml
+++ b/themes/openy_themes/openy_carnation/openy_carnation.libraries.yml
@@ -4,8 +4,8 @@ global-styling:
       dist/css/style.css: {}
   js:
     //use.fontawesome.com/95fd5fcc01.js: {}
-      dist/js/openy_carnation.min.js: {}
-#      src/js/scripts.js: {}
+#    dist/js/openy_carnation.min.js: {}
+    src/js/openy_carnation.js: {}
 
   dependencies:
     - core/jquery.once
