--- a/themes/openy_themes/openy_carnation/openy_carnation.libraries.yml
+++ b/themes/openy_themes/openy_carnation/openy_carnation.libraries.yml
@@ -4,7 +4,8 @@ global-styling:
       dist/css/style.css: {}
   js:
     //use.fontawesome.com/95fd5fcc01.js: {}
-#    dist/js/openy_carnation.min.js: {}
+    dist/js/popper.min.js: {}
+    dist/js/bootstrap.min.js: {}
     src/js/openy_carnation.js: {}
 
   dependencies:
