--- a/themes/openy_themes/openy_carnation/package.json
+++ b/themes/openy_themes/openy_carnation/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.1.1",
     "breakpoint-sass": "^2.7.1",
     "grunt": "^1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-sass-globbing": "^1.5.1",
     "sass": "^1.3.2"
   },
