--- a/themes/openy_themes/openy_carnation/openy_carnation.info.yml
+++ b/themes/openy_themes/openy_carnation/openy_carnation.info.yml
@@ -3,8 +3,8 @@ type: theme
 description: 'YMCA brand compliant and customizable theme.'
 package: YMCA
 core: 8.x
-#base theme: false
-base theme: bootstrap
+base theme: false
+#base theme: bootstrap
 libraries:
   - openy_carnation/global-styling
 regions:
