--- a/themes/openy_themes/openy_carnation/openy_carnation.libraries.yml
+++ b/themes/openy_themes/openy_carnation/openy_carnation.libraries.yml
@@ -1,11 +1,13 @@
 global-styling:
   css:
     base:
+      //fonts.googleapis.com/css?family=Comfortaa:300,400,700: { type: external, minified: true }
       dist/css/style.css: {}
   js:
-    //use.fontawesome.com/95fd5fcc01.js: {}
+    //use.fontawesome.com/95fd5fcc01.js: { type: external, minified: true }
     dist/js/popper.min.js: {}
     dist/js/bootstrap.min.js: {}
+    dist/js/jquery.matchHeight.min.js: {}
     src/js/openy_carnation.js: {}
 
   dependencies:
