--- a/themes/openy_themes/openy_carnation/package.json
+++ b/themes/openy_themes/openy_carnation/package.json
@@ -10,6 +10,7 @@
     "grunt": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-sass-globbing": "^1.5.1",
+    "jquery-match-height": "^0.7.2",
     "sass": "^1.3.2"
   },
   "devDependencies": {
