--- a/modules/openy_features/openy_prgf/modules/openy_prgf_location_by_amenities/openy_prgf_location_by_amenities.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_location_by_amenities/openy_prgf_location_by_amenities.info.yml
@@ -2,6 +2,7 @@ name: 'OpenY Paragraph Location By Amenities'
 package: OpenY
 type: module
 core: 8.x
+version: 8.x-1.0
 dependencies:
   - content_moderation
   - datalayer
